# life_event

./: .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  life_event_project_guide.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260224_01_init_plans_tasks.py  20260225_01_notifications.py  20260225_02_notification_token_version.py  20260311_01_task_template_version.py  20260312_01_template_versioning_m8.py
backend/app/: main.py
backend/app/api/: notifications.py  plans.py  schemas.py  templates.py
backend/app/db/: models.py  session.py
backend/app/domain/: workflow_test_runner.py  workflow_validator.py
backend/app/notifications/: brevo_provider.py  config.py  dedupe.py  templates.py  time_utils.py
backend/app/planner/: __init__.py  deadlines.py  engine.py  errors.py  rules.py  schema.py  toposort.py
backend/app/services/: errors.py  facts_normalizer.py  notification_outbox_service.py  notification_profile_service.py  outbox_dispatcher_service.py  plan_service.py  reminder_scanner_service.py  task_service.py  template_catalog_service.py  template_repository.py
backend/app/tests/: test_health.py  test_notifications.py  test_planner_deadlines.py  test_planner_engine.py  test_planner_regression_all_workflows.py  test_planner_rules.py  test_planner_toposort.py  test_plans_api.py  test_recompute_m7_policies.py  test_workflow_regressions_all.py  test_workflow_validation.py
backend/app/tools/: validate_all_workflows.py
backend/app/worker/: celery_app.py
docs/: API.md  (+3 more)
(+26 files in other folders)
