[project]
name = "life-event-backend"
version = "0.1.0"
description = "Life Event workflow engine backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "ruff>=0.11.0,<1.0.0",
  "black>=24.0.0,<26.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["app/tests"]
markers = [
  "workflow: Workflow template validation + regression tests (Milestone 1)",
]
